--- a/client/src/CreateProduct.scss
+++ b/client/src/CreateProduct.scss
@@ -13,7 +13,7 @@
   h1 {
     @include important-titles;
     position: absolute;
-    margin-bottom: 950px
+    margin-bottom: 1000px;
   }
 
   .create-form {
