--- a/client/src/Sort.scss
+++ b/client/src/Sort.scss
@@ -1,13 +1,12 @@
 @import "Main.scss";
 
-@import "Main.scss";
-
 .sort-container {
-  //width: 300px;
-  //padding: 20px;
-  //position: relative;
-  margin-top: 30px;
-  display:flex;
+  margin-left: 50px;
+  margin-top: 20px;
+
+  &.open{
+    display: block;
+  }
 
   .sort-buttons {
     margin: 10px;
@@ -17,15 +16,13 @@
 
   /* Styling for filter dropdown menus */
   .sort-dropdown.open .sort-dropdown-menu {
-    display: flex;
-
+    display: block;
   }
 
   .sort-dropdown-menu {
+    float: right;
     display: none;
-    top: 0;
-    left: 100%;
-
+    width: 100%;
     padding: 10px;
   }
 
@@ -39,8 +36,7 @@
 
   .sort-dropdown-toggle {
     width: 100%;
-    //color: $white;
-    background-color: #ccb1a7; /*  Change the color of the buttons for the filters here caitlin , hover is below this*/
+    background-color: #ccb1a7;
     border: 1px solid $white;
     border-radius: 3px;
     padding: 8px 12px;
@@ -69,7 +65,6 @@
   font-size: $title_font_size;
   font-weight: bold;
   text-transform: uppercase;
-  //color: $white;
   border: 2px solid $white;
   cursor: pointer;
   transition: all 0.3s ease;
@@ -90,20 +85,19 @@
  */
 
 .sort-button {
-  display: flex;
-  padding-left: 20px;
-  align-items: center;
-  flex-direction: column;
   position: relative;
+  display: inline-flex;
+  align-items: center;
+
+  h1 {
+    font-size: 18px;
+    font-family: Times New Roman, Serif, serif;
+    margin-left: 20px;
+  }
 }
 
-.sort-button > h1 {
-  font-size: 18px;
-  font-family: Times New Roman, Serif, serif;
-  margin-left: 200px;
-}
+
 .sort-icon {
-  position: absolute;
   margin-top: 25px;
   margin-right: 10px;
 }
@@ -113,8 +107,6 @@
 }
 
 .sort-icon > img {
-  width: 45px;
-  height: 45px;
-  margin-left: 85px;
-  position: absolute;
+  width: 35px;
+  height: 35px;
 }
