--- a/client/src/Filters.scss
+++ b/client/src/Filters.scss
@@ -35,8 +35,7 @@
 
   .filter-dropdown-toggle {
     width: 100%;
-    //color: $white;
-    background-color: #ccb1a7; /*  Change the color of the buttons for the filters here caitlin , hover is below this*/
+    background-color: #ccb1a7;
     border: 1px solid $white;
     border-radius: 3px;
     padding: 8px 12px;
@@ -69,7 +68,6 @@
   font-size: $title_font_size;
   font-weight: bold;
   text-transform: uppercase;
-  //color: $white;
   border: 2px solid $white;
   cursor: pointer;
   transition: all 0.3s ease;
