--- a/client/src/TShirtLayout.scss
+++ b/client/src/TShirtLayout.scss
@@ -1,16 +1,95 @@
 @import "Main.scss";
 
-.tshirt-image{
-  width: 100%;
+.tshirts-container{
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-between;
+}
+
+.tshirts-container > img{
+  display: flex;
+  flex-direction: row;
+  width: calc(20% - 20px);
+  max-width: 250px;
   height: auto;
-  max-width: 100%;
+  border: solid 2px $grey-border;
+  border-radius: 5px;
+  margin-bottom: 20px;
 }
 
 
 
-  .photo-65e061aad02190677027082d {
-    width: 250px;
-    height: 250px;
-    padding-left: 50%;
-  }
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+/*
+    All the tshirt images
+ */
+/*
+.tshirts-container {
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+  justify-content: space-between;
+  gap: 20px;
+  /*grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
+  gap: 20px;
+  justify-items: center;
+  /*display: flex;
+  flex-wrap: wrap;
+  justify-content: space-between;*//*
+}
+
+.tshirts-container > img {
+  width: calc(33.33% - 20px);
+  max-width: 250px;
+  height: auto;
+  /*width: 100%;
+  height: auto;
+  max-width: 100%;*/
+/*
+  border: solid 2px $grey-border;
+  border-radius: 5px;
+  margin-bottom: 20px;
+}
+
+/*
+    Individual images by photo id
+ */
+/*
+//.photo-65e061aad02190677027082d {
+//  width: calc(33.33% - 20px); /* Setting the width for each image with a gap in between*/
+//  margin-bottom: 20px;
+//}
+//
+//.photo-65e061fad02190677027082e {
+//  width: calc(33.33% - 20px);
+//  margin-bottom: 20px;
+//}
+//
+//.photo-65e066bbc2091b5bb0f7c16b {
+//
+//}
+//*/
 
