--- a/client/src/UserProfile.scss
+++ b/client/src/UserProfile.scss
@@ -1,48 +1,73 @@
+@import "Main";
 
 .profile-view {
   h1 {
     display: flex;
     justify-content: center;
+    @include important-titles;
+  }
+
+  h3 {
+    @include normal-text;
+    font-weight: bold;
+  }
+
+  h4 {
+    @include normal-text;
   }
 }
+
 .user-profile {
   display: flex;
   justify-content: center;
 }
 
 .profile-container {
-  background-color: white;
-  max-width: 700px;
   width: 700px;
-  border: solid black 2px;
+  height: 450px;
+  border-radius: 5px;
+  box-shadow: 20px 20px 50px grey;
+  border-color: #A26D5D;
+  border-style: outset;
+  display: flex;
+  align-items: center;
 
   .profile-photo {
     display: flex;
     justify-content: center;
+    //border: solid 2px $grey-border;
+    //width: 60px;
+    //height: 60px;
   }
 
   .profile-details {
-    display:flex;
+    display: flex;
     flex-direction: row;
     justify-content: center;
-    border: solid black 1px;
+    border-radius: 2px;
+    border-color: white;
+    margin-left: 120px;
+    border-style: outset;
+    padding: 20px;
 
-
-
-    .right{
+    .right {
       width: 50%;
       padding: 20px;
-      h3{
+
+      h3 {
         display: flex;
         justify-content: center;
       }
-      h4{
+
+      h4 {
         display: flex;
       }
+
       span {
         font-weight: lighter;
         margin-left: 10px;
       }
+
       p {
         border-bottom: solid grey 1px;
         border-top: solid grey 1px;
@@ -51,13 +76,74 @@
 
 
     }
+
     .left {
       width: 50%;
       padding: 20px;
     }
+
     span {
       font-weight: lighter;
       margin-left: 10px;
     }
   }
+}
+
+.update-btn {
+  background-color: #ccb1a7;
+  border: 2px solid $white;
+  font-family: $title-font;
+  font-size: 16px;
+  padding: 5px 7px;
+  border-radius: 5px;
+}
+
+.update-btn:hover {
+  background-color: #A26D5D;
+  border-color: $grey-border;
+  cursor: pointer;
+}
+
+.add-address-btn {
+  background-color: #ccb1a7;
+  border: 2px solid $white;
+  font-family: $title-font;
+  font-size: 16px;
+  padding: 5px 7px;
+  border-radius: 5px;
+}
+
+.add-address-btn:hover {
+  background-color: #A26D5D;
+  border-color: $grey-border;
+  cursor: pointer;
+}
+
+.user-profile-return-btn {
+  background-color: #ccb1a7;
+  border: 2px solid $white;
+  font-family: $title-font;
+  font-size: 16px;
+  padding: 5px 7px;
+  border-radius: 5px;
+  margin-top: 270px;
+  margin-left: 25px;
+}
+
+.user-profile-return-btn:hover {
+  background-color: #A26D5D;
+  border-color: $grey-border;
+  cursor: pointer;
+}
+
+.profile-history {
+  h2 {
+    @include important-titles;
+    margin-bottom: 300px;
+    margin-left: 20px;
+  }
+}
+
+.right h3 {
+  flex-direction: column;
 }
