--- a/client/src/css/Footer.css
+++ b/client/src/css/Footer.css
@@ -6,55 +6,36 @@
   display: flex;
   z-index: 2;
   position: relative; }
-
-
-.footer-container > h2 {
-  font-weight: bold;
-  cursor: pointer;
-}
-
-.help-section > h2,
-.link-section > h2 {
-  font-family: Times New Roman, Serif, serif;
-  font-size: 18px;
-}
-
-.link-section > h2 {
-  margin-bottom: 20px;
-}
-
-.help-section,
-.link-section > h3 {
-  font-family: Times New Roman, Serif, serif;
-  font-size: 12px;
-}
-
-.facebook-image, .instagram-image {
-  width: 45px;
-  height: 45px;
-  margin-right: 10px;
-}
-
-.snapchat-image {
-  height: 80px;
-  margin-right: 10px;
-}
-
-.help-section {
-  display: flex;
-  flex-direction: column;
-  margin-left: 65px;
-}
-
-.link-section, .social-media-icons {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-}
-
-.link-section {
-  margin-left: 250px;
-}
+  .footer-container h2 {
+    font-weight: bold;
+    cursor: pointer; }
+  .footer-container .help-section > h2,
+  .footer-container .link-section > h2 {
+    font-family: Times New Roman, Serif, serif;
+    font-size: 18px; }
+  .footer-container .link-section h2 {
+    margin-bottom: 20px; }
+  .footer-container .help-section,
+  .footer-container .link-section > h3 {
+    font-family: Times New Roman, Serif, serif;
+    font-size: 12px; }
+  .footer-container .facebook-image, .footer-container .instagram-image {
+    width: 45px;
+    height: 45px;
+    margin-right: 10px; }
+  .footer-container .snapchat-image {
+    height: 80px;
+    margin-right: 10px; }
+  .footer-container .help-section {
+    display: flex;
+    flex-direction: column;
+    margin-left: 65px; }
+  .footer-container .link-section, .footer-container .social-media-icons {
+    display: flex;
+    flex-direction: column;
+    align-items: center; }
+  .footer-container .link-section {
+    margin-left: 250px; }
 
 /*
     Copyright symbol
@@ -66,12 +47,9 @@
   height: 30px;
   border-radius: 2px;
   border: solid #d4cbcb;
-  display: flex;
-}
-
-.copyright-section > span {
-  margin-left: 65px;
-  font-family: Times New Roman, Serif, serif;
-}
+  display: flex; }
+  .copyright-section span {
+    margin-left: 65px;
+    font-family: Times New Roman, Serif, serif; }
 
 /*# sourceMappingURL=Footer.css.map */
