--- a/client/src/css/TShirtLayout.css
+++ b/client/src/css/TShirtLayout.css
@@ -1,12 +1,13 @@
+/*
+    All the t-shirt images
+ */
 .tshirts-container {
   display: flex;
   flex-wrap: wrap;
   justify-content: space-between; }
 
-.tshirts-container > img {
-  display: flex;
-  flex-direction: row;
-  width: calc(20% - 20px);
+.tshirts-container img {
+  width: calc(33.33% - 20px);
   max-width: 250px;
   height: auto;
   border: solid 2px #363131;
@@ -14,42 +15,41 @@
   margin-bottom: 20px; }
 
 /*
-    All the tshirt images
+    Troubleshooting with chatgpt to try and style the tshirts into rows
+    with 3 images in each row
  */
 /*
 .tshirts-container {
   display: flex;
-  flex-direction: row;
-  flex-wrap: wrap;
-  justify-content: space-between;
+  grid-template-columns: repeat(3, 1fr);
   gap: 20px;
-  /*grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
-  gap: 20px;
-  justify-items: center;
-  /*display: flex;
-  flex-wrap: wrap;
-  justify-content: space-between;*/
-                                   /*
 }
 
-.tshirts-container > img {
-  width: calc(33.33% - 20px);
-  max-width: 250px;
+.tshirts-container img {
+  max-width: 100%;
   height: auto;
-  /*width: 100%;
-  height: auto;
-  max-width: 100%;*/
-/*
   border: solid 2px $grey-border;
   border-radius: 5px;
+}
+*/
+/*
+    Trying to get Individual images by photo id
+ */
+/*
+.photo-65e061aad02190677027082d {
+  width: calc(33.33% - 20px);
   margin-bottom: 20px;
 }
 
-/*
-    Individual images by photo id
- */
-/*
-//.photo-65e061aad02190677027082d {
-//  width: calc(33.33% - 20px); /* Setting the width for each image with a gap in between*/
+.photo-65e061fad02190677027082e {
+  width: calc(33.33% - 20px);
+  margin-bottom: 20px;
+  margin-left: 100px;
+}
+
+.photo-65e066bbc2091b5bb0f7c16b {
+
+}
+*/
 
 /*# sourceMappingURL=TShirtLayout.css.map */
