--- a/client/src/css/Footer.css
+++ b/client/src/css/Footer.css
@@ -2,40 +2,50 @@
   background-color: #efe6e6;
   width: 100%;
   border-radius: 2px;
-  border: solid #d4c7c7c2;
+  border: solid rgba(212, 199, 199, 0.7607843137);
   display: flex;
   z-index: 2;
-  position: relative; }
-  .footer-container h2 {
-    font-weight: bold;
-    cursor: pointer; }
-  .footer-container .help-section > h2,
-  .footer-container .link-section > h2 {
-    font-family: Times New Roman, Serif, serif;
-    font-size: 18px; }
-  .footer-container .link-section h2 {
-    margin-bottom: 20px; }
-  .footer-container .help-section,
-  .footer-container .link-section > h3 {
-    font-family: Times New Roman, Serif, serif;
-    font-size: 12px; }
-  .footer-container .facebook-image, .footer-container .instagram-image {
-    width: 45px;
-    height: 45px;
-    margin-right: 10px; }
-  .footer-container .snapchat-image {
-    height: 80px;
-    margin-right: 10px; }
-  .footer-container .help-section {
-    display: flex;
-    flex-direction: column;
-    margin-left: 65px; }
-  .footer-container .link-section, .footer-container .social-media-icons {
-    display: flex;
-    flex-direction: column;
-    align-items: center; }
-  .footer-container .link-section {
-    margin-left: 250px; }
+  position: relative;
+}
+.footer-container h2 {
+  font-weight: bold;
+  cursor: pointer;
+}
+.footer-container .help-section > h2,
+.footer-container .link-section > h2 {
+  font-family: Times New Roman, Serif, serif;
+  font-size: 18px;
+}
+.footer-container .link-section h2 {
+  margin-bottom: 20px;
+}
+.footer-container .help-section,
+.footer-container .link-section > h3 {
+  font-family: Times New Roman, Serif, serif;
+  font-size: 12px;
+}
+.footer-container .facebook-image, .footer-container .instagram-image {
+  width: 45px;
+  height: 45px;
+  margin-right: 10px;
+}
+.footer-container .snapchat-image {
+  height: 80px;
+  margin-right: 10px;
+}
+.footer-container .help-section {
+  display: flex;
+  flex-direction: column;
+  margin-left: 65px;
+}
+.footer-container .link-section, .footer-container .social-media-icons {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+.footer-container .link-section {
+  margin-left: 250px;
+}
 
 /*
     Copyright symbol
@@ -47,9 +57,11 @@
   height: 30px;
   border-radius: 2px;
   border: solid #d4cbcb;
-  display: flex; }
-  .copyright-section span {
-    margin-left: 65px;
-    font-family: Times New Roman, Serif, serif; }
+  display: flex;
+}
+.copyright-section span {
+  margin-left: 65px;
+  font-family: Times New Roman, Serif, serif;
+}
 
 /*# sourceMappingURL=Footer.css.map */
