--- a/client/src/css/NavBar.css
+++ b/client/src/css/NavBar.css
@@ -6,90 +6,108 @@
   z-index: 1000;
   justify-content: space-between;
   align-items: center;
-  overflow: hidden; }
-  .nav-container .container {
-    display: flex;
-    align-items: center; }
-  .nav-container .search-container {
-    display: flex;
-    align-items: center;
-    padding-left: 20px;
-    padding-bottom: 75px; }
-  .nav-container .search-bar {
-    border-color: white;
-    border-radius: 0;
-    border-style: outset;
-    display: inline-block;
-    vertical-align: middle; }
-  .nav-container .search-bar > #search {
-    font-family: Times New Roman, Serif, serif;
-    font-size: 16px;
-    font-weight: bold;
-    width: 310px;
-    height: 30px;
-    border: none;
-    outline: none; }
-  .nav-container .searchIcon > img {
-    width: 30px;
-    height: 30px;
-    cursor: pointer; }
-  .nav-container .icons-container {
-    display: flex; }
-  .nav-container .icons-container > .logo-image {
-    display: flex;
-    margin: auto; }
-  .nav-container .logo-image > img {
-    width: 275px;
-    padding-bottom: 65px;
-    padding-left: 225px;
-    padding-right: 200px; }
-  .nav-container .icons-container > .searchIcon {
-    margin-left: 10px; }
-  .nav-container .account > img {
-    width: 35px;
-    height: 30px;
-    padding-bottom: 60px;
-    padding-left: 300px; }
-  .nav-container .shopping-bag > img {
-    width: 40px;
-    height: 30px;
-    padding-bottom: 60px;
-    padding-left: 10px;
-    padding-right: 20px; }
-  .nav-container .search-dropdown {
-    position: absolute;
-    top: 100%;
-    left: 5px;
-    background-color: white;
-    border: 1px solid #363131;
-    border-radius: 4px;
-    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
-    z-index: 1000; }
-  .nav-container .search-dropdown-content {
-    padding: 10px;
-    cursor: pointer;
-    width: 450px;
-    max-height: 400px;
-    overflow-y: auto; }
-  .nav-container .search-dropdown-item {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    border-bottom: 1px solid #ccc;
-    padding: 20px; }
-  .nav-container .search-dropdown-item:last-child {
-    border-bottom: none;
-    /* Remove border for last item */ }
-  .nav-container .search-dropdown-item:hover {
-    cursor: pointer;
-    background-color: gray; }
-  .nav-container .catch-name-overload {
-    white-space: nowrap;
-    overflow: hidden;
-    text-overflow: ellipsis;
-    max-width: 200px; }
-  .nav-container .search-category,
-  .nav-container .search-brand {
-    max-width: 100px; }
+  overflow: hidden;
+}
+.nav-container .container {
+  display: flex;
+  align-items: center;
+}
+.nav-container .search-container {
+  display: flex;
+  align-items: center;
+  padding-left: 20px;
+  padding-bottom: 75px;
+}
+.nav-container .search-bar {
+  border-color: white;
+  border-radius: 0;
+  border-style: outset;
+  display: inline-block;
+  vertical-align: middle;
+}
+.nav-container .search-bar > #search {
+  font-family: Times New Roman, Serif, serif;
+  font-size: 16px;
+  font-weight: bold;
+  width: 310px;
+  height: 30px;
+  border: none;
+  outline: none;
+}
+.nav-container .searchIcon > img {
+  width: 30px;
+  height: 30px;
+  cursor: pointer;
+}
+.nav-container .icons-container {
+  display: flex;
+}
+.nav-container .icons-container > .logo-image {
+  display: flex;
+  margin: auto;
+}
+.nav-container .logo-image > img {
+  width: 275px;
+  padding-bottom: 65px;
+  padding-left: 225px;
+  padding-right: 200px;
+}
+.nav-container .icons-container > .searchIcon {
+  margin-left: 10px;
+}
+.nav-container .account > img {
+  width: 35px;
+  height: 30px;
+  padding-bottom: 60px;
+  padding-left: 300px;
+}
+.nav-container .shopping-bag > img {
+  width: 40px;
+  height: 30px;
+  padding-bottom: 60px;
+  padding-left: 10px;
+  padding-right: 20px;
+}
+.nav-container .search-dropdown {
+  position: absolute;
+  top: 100%;
+  left: 5px;
+  background-color: white;
+  border: 1px solid #363131;
+  border-radius: 4px;
+  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+  z-index: 1000;
+}
+.nav-container .search-dropdown-content {
+  padding: 10px;
+  cursor: pointer;
+  width: 450px;
+  max-height: 400px;
+  overflow-y: auto;
+}
+.nav-container .search-dropdown-item {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  border-bottom: 1px solid #ccc;
+  padding: 20px;
+}
+.nav-container .search-dropdown-item:last-child {
+  border-bottom: none; /* Remove border for last item */
+}
+.nav-container .search-dropdown-item:hover {
+  cursor: pointer;
+  background-color: gray;
+}
+.nav-container .catch-name-overload {
+  white-space: nowrap;
+  overflow: hidden;
+  text-overflow: ellipsis;
+  max-width: 200px;
+}
+.nav-container .search-category,
+.nav-container .search-brand {
+  max-width: 100px;
+}
 
 /*# sourceMappingURL=NavBar.css.map */
